<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius"
        app:strokeColor="@color/grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/rg_gpa_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checkedButton="@id/rb_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gpa_system">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_four" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_five" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gpa_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/gpa_system"
                app:layout_constraintBottom_toTopOf="@+id/rg_gpa_system"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


<!--    <com.google.android.material.card.MaterialCardView-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="@dimen/radius"-->
<!--        app:strokeColor="@color/grey">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <RadioGroup-->
<!--                android:id="@+id/rg_highest_grade"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:checkedButton="@id/rb_A"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tv_highest_grade">-->

<!--                <com.google.android.material.radiobutton.MaterialRadioButton-->
<!--                    android:id="@+id/rb_A"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/A_grade" />-->

<!--                <com.google.android.material.radiobutton.MaterialRadioButton-->
<!--                    android:id="@+id/rb_Aplus"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/Aplus" />-->
<!--            </RadioGroup>-->

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/tv_highest_grade"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginBottom="4dp"-->
<!--                android:text="@string/highest_grade"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/rg_highest_grade"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </com.google.android.material.card.MaterialCardView>-->

</LinearLayout>